ADD VALIDATION AND SOLUTION TESTS